# calki

./: Cargo.toml  README.md
edtui/: .cargo_vcs_info.json  Cargo.toml
edtui/src/view/: line_wrapper.rs
src/: currency.rs  main.rs  wiki.rs
src/edtui/: actions.rs  helper.rs  state.rs  view.rs
src/edtui/actions/: cpaste.rs  delete.rs  insert.rs  motion.rs  search.rs  select.rs  system_editor.rs
src/edtui/clipboard/: arboard.rs
src/edtui/events/: key.rs  mod.rs  mouse.rs  paste.rs
src/edtui/events/key/: deprecated.rs  input.rs
src/edtui/state/: highlight.rs  search.rs  selection.rs  undo.rs  view.rs
src/edtui/view/: internal.rs  line_wrapper.rs  render_line.rs  syntax_higlighting.rs
src/math/: eval.rs  lexer.rs  mod.rs  parser.rs  units.rs
wiki/: car-comparison.md  car-stuff.md  home.md
