[package]
name = "calki"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.1"
crossterm = "0.29.0"
edtui = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9.0", features = ["json"] }
arboard = "3.4.0"
unicode-width = "0.2"

[patch.crates-io]
edtui = { path = "./edtui" }
